# wealth_lab_gbp

./: .gitignore  02_tax_aware_rebal.ipynb  03_client_segmentation.ipynb  04_attribution_and_factors.ipynb  PKG-INFO  README.md  backtest.py  build_reports.py  config.py  factor.py  ff_factors.py  index.html  model.py  pipeline.py  prices_yf.py  pyproject.toml  requirements.txt  requires.txt  setup.cfg  sonia_fred.py  synth_clients.py  tax_aware.py  test_attribution.py  test_tax.py  top_level.txt
.github/workflows/: ci.yml  pages.yml
app/: Home.py
notebooks/: 01_saa_monthly.ipynb
src/wealth_lab/: pipeline.py
src/wealth_lab/attribution/: brinson.py  model_card.md
src/wealth_lab/data/: ff_factors.py  prices_yf.py
src/wealth_lab/saa/: model_card.md  optimizer.py
src/wealth_lab/segmentation/: model_card.md
src/wealth_lab/tax_rebal/: lots.py  model_card.md
src/wealth_lab_gbp.egg-info/: SOURCES.txt
tests/: test_saa.py
