[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wealth-lab-gbp"
version = "0.1.1"
description = "Public-data wealth management models (GBP base): SAA optimiser, tax-aware rebalancing, client segmentation, attribution & factor exposure."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.26",
  "pandas>=2.1",
  "scipy>=1.11",
  "matplotlib>=3.8",
  "cvxpy>=1.4",
  "yfinance>=0.2.40",
  "pandas-datareader>=0.10",
  "scikit-learn>=1.3",
  "statsmodels>=0.14",
  "pyarrow>=14",
  "streamlit>=1.36",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "ruff>=0.5",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
